1999-03-09  Tanaka Akira      <akr@jaist.ac.jp>

	* digraph.el: Refined.

	* automata.el (automata): Adopted to above.

1999-03-04  Tanaka Akira      <akr@jaist.ac.jp>

	* mel.el (mime-decode-string): Return `string' itself if
	`encoding' is unknown.

1999-02-26  Tanaka Akira      <akr@jaist.ac.jp>

	* mime-def.el (mime-library-product): Bump up to FLAM-DOODLE
	1.12.4.

1999-02-24  Tanaka Akira      <akr@jaist.ac.jp>

	* eword-decode.el (eword-analyze-sticked-encoded-word): New variable.
	(eword-analyze-atom): Check `eword-analyze-sticked-encoded-word'.

1999-02-22  Tanaka Akira      <akr@jaist.ac.jp>

	* mel-q-ccl.el (mel-ccl-encode-quoted-printable-generic): Fix previous
	change.

1999-02-21  Tanaka Akira      <akr@jaist.ac.jp>

	* mel-q-ccl.el (mel-ccl-encode-quoted-printable-generic): Refined.
	(mel-ccl-set-eof-block): New function.
	(mel-ccl-try-to-read-crlf): Use `mel-ccl-set-eof-block'.

1999-02-20  Tanaka Akira      <akr@jaist.ac.jp>

	* mime-def.el (mime-library-product): Bump up to FLAM-DOODLE
	1.12.3.

1999-02-19  Tanaka Akira      <akr@jaist.ac.jp>

	* eword-decode.el (mime-decode-header-in-region): Fix typo.

1999-02-19  Tanaka Akira      <akr@jaist.ac.jp>

	* eword-encode.el (eword-encode-field-body): Use
	`eword-encode-structured-field-body' for "Content-Type" field.

1999-02-19  Tanaka Akira      <akr@jaist.ac.jp>

	* mel-b-ccl.el (base64-ccl-encode-string): New argument `no-line-break'.
	(base64-ccl-encode-region): Ditto.

1999-02-19  Tanaka Akira      <akr@jaist.ac.jp>

	* mime.el (mime-read-field): Use `plain' instead of `native' for
	third argument for `mime-decode-field-body'.

1999-02-18  Tanaka Akira      <akr@jaist.ac.jp>

	* Sync up to flim-1_12_5 from flim-1_12_1.

	* mime-def.el (mime-library-product): Bump up to FLAM-DOODLE
	1.12.2.

1999-02-18  Tanaka Akira      <akr@jaist.ac.jp>

	* mel-b-ccl.el (mel-ccl-encode-base64-generic): Shift timing for
	linebreak.

1999-02-08  Tanaka Akira      <akr@jaist.ac.jp>
